# faker-rs

./: Cargo.toml  LICENSE  README.md
faker/: Cargo.toml
faker/src/: defnitions.rs  engine.rs  fake.rs  faker.rs  fixed.rs  lib.rs  random.rs  traits.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
